add launch4j in package target